KULRICE-6757: Update new Integer calls to Integer.valueOf to improve performance